{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "6fbdbd2c-8f96-4db8-9efb-d08e5291ba8f",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "0f10f581-551a-46a6-85b8-8356b96050d6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "ecbae152-a886-4b17-8657-2078c0362073",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "c0f0e938-9688-4e4d-ba9c-fac5b656674b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ea968382-9ad4-40ec-97f1-1f56f05301b0",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b1cc54e-3319-411b-ae37-af061e35cb2d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "120d5032-0a1b-45be-b1ca-5b31a5f84bf6",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}